--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
       <encoding>UTF-8</encoding>
-      <scala.version>2.11.5</scala.version>
-      <scala.compat.version>2.11</scala.compat.version>
+      <scala.version>2.12.6</scala.version>
+      <!--scala.compat.version>2.12</scala.compat.version-->
    </properties>
 
    <dependencies>
@@ -27,9 +27,9 @@
          <version>${scala.version}</version>
       </dependency>
       <dependency>
-         <groupId>org.scala-lang</groupId>
-         <artifactId>scala-xml</artifactId>
-         <version>2.11.0-M4</version>
+         <groupId>org.scala-lang.modules</groupId>
+         <artifactId>scala-xml_2.12</artifactId>
+         <version>1.1.0</version>
       </dependency>
 
       <!-- Test -->
@@ -39,25 +39,13 @@
          <version>4.11</version>
          <scope>test</scope>
       </dependency>
-      <dependency>
-         <groupId>org.specs2</groupId>
-         <artifactId>specs2-core_${scala.compat.version}</artifactId>
-         <version>2.4.16</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.scalatest</groupId>
-         <artifactId>scalatest_${scala.compat.version}</artifactId>
-         <version>2.2.4</version>
-         <scope>test</scope>
-      </dependency>
 
       <!-- compat -->
 
       <dependency>
          <groupId>org.scala-lang.modules</groupId>
-         <artifactId>scala-java8-compat_2.11</artifactId>
-         <version>0.7.0</version>
+         <artifactId>scala-java8-compat_2.12</artifactId>
+         <version>0.9.0</version>
       </dependency>
 
       <!-- project specific -->
@@ -147,7 +135,7 @@
                </excludes>
             </configuration>
          </plugin>
-         <plugin>
+         <!--plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
             <executions>
@@ -158,7 +146,7 @@
                   </goals>
                </execution>
             </executions>
-         </plugin>
+         </plugin-->
 
       </plugins>
    </build>
